<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/app_name"
    android:background="@drawable/degradado_fondo"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="@dimen/itemmargin"
            android:fontFamily="casual"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="match_parent"
            android:layout_height="255dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:srcCompat="@drawable/i_mudra_1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/crono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:background="@drawable/botones_esquinas_redondeadas"
                android:fontFamily="casual"
                android:text="Iniciar" />

            <Button
                android:id="@+id/sig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/botones_esquinas_redondeadas"
                android:fontFamily="casual"
                android:text="Siguiente" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:text="@string/beneficispasos"
                android:textSize="24sp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/comentario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:fontFamily="casual"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

                    <TextView
                        android:id="@+id/pasos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/itemmargin"
                        android:fontFamily="casual"
                        android:text="TextView"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        tools:text="@string/instruc" />
                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>